<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/componentdetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.componentdetails.ComponentDetailsFragment">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="1dp">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textHeading"
                        android:text="@string/demo_text"
                        android:id="@+id/serialHeadingTextView"/>

                <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                <Button
                        android:id="@+id/deleteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/componentDetails_delete"/>
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/componentDetails_serial"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/demo_text"
                        android:id="@+id/serialTextView"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/componentDetails_type"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/demo_text"
                        android:id="@+id/typeTextView"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/componentDetails_created"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/demo_text"
                        android:id="@+id/createdTextView"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/componentDetails_modified"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textNormal"
                        android:text="@string/demo_text"
                        android:id="@+id/modifiedTextView"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
