<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/default_margin"
        android:paddingStart="@dimen/default_margin"
        android:paddingRight="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:paddingTop="@dimen/cell_margin"
        android:paddingBottom="@dimen/cell_margin"
        android:clipToPadding="false"
        android:clipChildren="false">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="1dp"
            android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textCell"
                        android:text="@string/componentTypeList_name"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textCell"
                        android:text="@string/demo_text"
                        android:id="@+id/nameTextView"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textCell"
                        android:text="@string/componentTypeList_inStorage"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textCell"
                        android:text="@string/demo_text"
                        android:id="@+id/inStorageTextView"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>